ES6 #4 Class_prototype

--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     <p><i class="fas fa-map-marker-alt"></i>Саратов, Россия</p>
 </div>
 </div>
-<script src="operand_spreed.js"></script>
+<script src="class_prototype.js"></script>
 </body>
 </html>
