[AddEventListener, querySelector, querySelectorAll, forEach, getElementById, getElementByTarName]

--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
     </label>
 </header>
 <main>
-    <h1></h1>
+    <h1>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button class="btn" id='1' > Нажми меня сильно</button>
+
+
+
+    </h1>
     <section class="intro wrapper">
         <div class="intro-img">
             <p class="intro-text">
@@ -68,6 +79,6 @@
     <p><i class="fas fa-map-marker-alt"></i>Саратов, Россия</p>
 </div>
 </div>
-<script src="class_prototype.js"></script>
+<script src="addEventListener.js"></script>
 </body>
 </html>
