[AddEventListener, querySelector, querySelectorAll, forEach, getElementById, getElementByTarName]

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 </header>
 <main>
     <h1>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
-        <button class="btn" id='1' > Нажми меня сильно</button>
+        <button data-number = '2' class="btn" id='1' > <b>Нажми </b> </button>
+        <button data-number = '3' class="btn" id='2' > <b>Нажми меня сильно</b> </button>
+        <button data-number = '4' class="btn" id='3' > <b>Нажми меня сильно</b> </button>
+        <button data-number = '5' class="btn" id='4' > <b>Нажми меня сильно</b> </button>
+        <button data-number = '6' class="btn" id='5' > Нажми меня сильно</button>
+        <button data-number = '7' class="btn" id='6' > Нажми меня сильно</button>
+        <button data-number = '8' class="btn" id='7' > Нажми меня сильно</button>
 
 
 
