Interaction Dom-tree

--- a/index.html
+++ b/index.html
@@ -1,84 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/8c5f8983b2.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <title>DOM (Document Object Model)</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="body">
-<header>
-    <input type="checkbox" id="checkbox-menu">
-    <label for="checkbox-menu">
-        <nav>
-            <ul class="menu  + touch + neon">
-                <li><a class="logo" href="index.html"> homePage </a></li>
-                <li><a href="index__scills.html"> Scills </a></li>
-                <li><a href="index__plans.html"> Plans  </a></li>
-                <li><a href="index__project.html"> Projects </a></li>
-                <li><a href="index__slider.html"> Slider </a></li>
-                <li><a href="index__education.html"> Education </a></li>
-                <li><a href="index__implemented.html"> implemented  </a></li>
-                <li><a class="contacts" href="index__contacts.html"> Contacts </a></li>
-            </ul>
-            <span class="toggle"><i class="fas fa-align-justify"></i></span>
-        </nav>
-    </label>
-</header>
-<main>
-    <h1>
-        <button data-number = '2' class="btn" id='1' > <b>Нажми </b> </button>
-        <button data-number = '3' class="btn" id='2' > <b>Нажми меня сильно</b> </button>
-        <button data-number = '4' class="btn" id='3' > <b>Нажми меня сильно</b> </button>
-        <button data-number = '5' class="btn" id='4' > <b>Нажми меня сильно</b> </button>
-        <button data-number = '6' class="btn" id='5' > Нажми меня сильно</button>
-        <button data-number = '7' class="btn" id='6' > Нажми меня сильно</button>
-        <button data-number = '8' class="btn" id='7' > Нажми меня сильно</button>
+<body>
+  
 
 
-
-    </h1>
-    <section class="intro wrapper">
-        <div class="intro-img">
-            <p class="intro-text">
-                "Большинство хороших программистов делают свою
-                <br> работу не потому, что ожидают оплаты или признания, <br>а потому что получают удовольствие от
-                программирования."<br>
-                <a href="https://ru.wikipedia.org/wiki/%D0%A2%D0%BE%D1%80%D0%B2%D0%B0%D0%BB%D1%8C%D0%B4%D1%81,
-                _%D0%9B%D0%B8%D0%BD%D1%83%D1%81">
-                    <i>Linus Torvalds</i>
-                </a>
-            </p>
-        </div>
-
-        <button> Change User </button>
-    </section>
-</main>
-
-<div class="business__card">
-    <img class="photo" src="Img/homepage.jpg"/>
-    <ul class="data">
-        <li > Тарас Шевченко </li>
-        <li class = "color"> Образование: высшее (очное и заочное) </li>
-        <li class = "color"> Ученая степень: кандидат наук </li>
-        <li class = "color"> Ученое звание: доцент </li>
-        <li class = "color4"> Возраст: 40 лет </li>
-        <li class = "color5"> My Github: <button class="href__button"><a href="https://github.com/Taras-js?tab=repositories">
-            Repozitory </a></button> </li>
-        <li class = "color6"> HeadHunter (hh.ru): <button class="href__button"><a href="https://engels.hh.ru/resume/b47c9da0ff08bc6df40039ed1f7648386e4471">
-            Rezume </a></button> </li>
-        <li class = "color7"> My projects: <button class="href__button"><a href="index__project.html">
-            projects </a></button> </li>
-    </ul>
-</div>
-
-<div>
-<div class="intro-contacts">
-    <p><i class="fas fa-phone"></i>8-937-819-30-17</p>
-    <p><i class="fas fa-map-marker-alt"></i>Саратов, Россия</p>
-</div>
-</div>
-<script src="addEventListener.js"></script>
+  <script src="interaction-with-the-DOM-tree.js"></script>
 </body>
 </html>
