Copy object and array

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   
 
 
-  <script src="interaction-with-the-DOM-tree.js"></script>
+  <script src="copy-objekt-&&-array.js"></script>
 </body>
 </html>
