LocalStorage for TodoList

--- a/index.html
+++ b/index.html
@@ -7,9 +7,70 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+<div class="wrapper">
+  <h2>Создай Свой Список Дел!</h2>
+  <p></p>
+  <ul class="tasks-list">
+    <li>Загружаю задачи...</li>
+  </ul>
+  <form class="add-tasks-form">
+    <input type="text" name="item" placeholder="Впишите задачу" autocomplete="off" required>
+    <input type="submit" value="+ Добавить задачу">
+    <button class="remove-tasks">Удалить все задачи</button>
+  </form>
+</div>
 
 
-  <script src="copy-objekt-&&-array.js"></script>
+  <script >
+
+    const tasksList = document.querySelector('.tasks-list');
+    const addTasksList = document.querySelector('.add-tasks-form');
+    const tasks = JSON.parse(localStorage.getItem('tasks')) || [];
+    const removeTasks = document.querySelector('.remove-tasks');
+    removeTasks.addEventListener('click', deleteTasksAll);
+    const deleteBtn = document.querySelector('.delete-btn');
+    // deleteBtn.addEventListener('click', deleteTasks);
+    // function deleteTasks (e) {
+    //
+    //   const delTask = e.target
+    //   console.log(delTask)
+    //
+    // }
+    function deleteTasksAll (tasks) {
+      localStorage.clear();
+      tasks = [];
+      return displayTasks(tasks, tasksList);
+    }
+    function addTasks (e) {
+      e.preventDefault()
+      const text = e.target.item.value;
+      const item = {
+        text,
+        checked: false
+      }
+      tasks.push(item);
+      localStorage.setItem('tasks', JSON.stringify(tasks));
+      displayTasks(tasks, tasksList)
+      this.reset()
+    }
+    function displayTasks (tasks, tasksList) {
+      tasksList.innerHTML = tasks.map((task, index) => {
+        return `<li><input type='checkbox' id='item${index}' data-index='${index}' ${task.checked ? 'checked' : ''}/>
+          <label for='item${index}'>${task.text}</label><button class="delete-btn">Х</button>
+          </li>`
+      }).join('');
+    }
+    function toggleClick (e) {
+      if (!e.target.matches('input')) return;
+
+      const element = e.target.dataset.index;
+      tasks[element].checked = !tasks[element].checked;
+      localStorage.setItem('tasks', JSON.stringify(tasks));
+      displayTasks(tasks, tasksList);
+    }
+    tasksList.addEventListener('click', toggleClick);
+    addTasksList.addEventListener('submit', addTasks);
+    displayTasks(tasks, tasksList);
+  </script>
 </body>
 </html>
