Methods of Array two

--- a/array/index.html
+++ b/array/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Работа с массивами данных</title>
+    <title>Методы Массивов - 2</title>
 </head>
-
 <body>
-<script src="metods-of-Array.js"></script>
-</body>
 
+
+<script>
+
+</script>
+</body>
 </html>
