Open close modal window && animation

--- a/modal_window/index.html
+++ b/modal_window/index.html
@@ -6,30 +6,17 @@
     <title>MODAL WINDOW</title>
 </head>
 <body>
-<div>
+<div class="container">
     <h1>Создание модального окна на JS</h1>
     <p> Lorem100 </p>
+    <label for="open-button"> Run modal window </label>
+    <button class="open-button" id="open-button" data-open="data-open"> RUN </button>
 </div>
-<div class="vmodal">
-    <div class="modal-overlay">
-        <div class="modal-window">
-            <div class="modal-header">
-                <span class="modal-title"> Modal title</span>
-                <span class="modal-close">&times</span>
-            </div>
-            <div class="modal-body">Telo modal
 
-            </div>
-            <div class="modal-footer">Podval modal
-
-            </div>
-
-        </div>
-    </div>
-</div>
 
 <script src="base.js"></script>
-<script src="index.js"></script>
 <script src="plugins/modal.js "></script>
+<script src="index.js"></script>
+
 </body>
 </html>
