Delete card from coffee

--- a/modal_window/index.html
+++ b/modal_window/index.html
@@ -22,12 +22,14 @@
             <button class="delete-modal" id="delete-modal" data-delete="true"> DELETE </button>
         </li>
         <li>
-            <label for="create-modal"> Delete modal window </label>
+            <label for="create-modal"> CREATE MODAL WINDOW IN DOM-TREE </label>
             <button class="create-modal" id="create-modal" data-create="true"> CREATE MODAL WINDOW IN DOM-TREE </button>
         </li>
     </ul>
 </div>
+<div class="all-coffee"> All Coffee
 
+</div>
 <script src="base.js"></script>
 <script src="plugins/modal.js "></script>
 <script src="plugins/promise.js"></script>
